# jidoka

./: .commit-msg-tmp.txt  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  jidoka.code-workspace  package-lock.json  package.json
.claude/: settings.json
.githooks/: pre-push
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
andon/: README.md
app/: README.md  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
docs/: MUERTOS.md  casos-de-exito.md  handoff-historico.md  roadmap-historico.md
doctrina/: 00-tesis.md  01-linaje-manufactura.md  02-linaje-software.md  03-aviacion.md  04-como-se-pudre.md  05-instrumentacion.md  06-fronteras.md  07-receta-de-traslado.md  08-kata-de-mejora.md  README.md  citas-verificadas.md
extension/: README.md  contratos.js  contratos.test.js  extension.js  ligas.js  ligas.test.js  package.json  ritual.js  ritual.test.js
kanban/: README.md  auditoria.md  desatendido.md  estados.md  homologacion.md  jerarquia.md  lazo.md  roles.md  verificacion.md
product/: PRODUCT_BRIEF.md  README.md  casting.md  infra.md  recursos-del-proyecto.md
qa_runs/: README.md
tools/: anti-pii.denylist.example.txt  anti-pii.ps1  asientos.ps1  auditar.ps1  bandeja.ps1  blast-radius.json  docs-gobernados.json  estado-docs.ps1  estado-flujo.ps1  estado-gobierno.ps1  estado-ligas.ps1  estado-motor.ps1  estado-ritual.ps1  (+39 more)
(+291 files in other folders)
