[package]
name = "jidoka-tuberia"
version = "0.0.0"
description = "Jidoka - la tuberia (app de escritorio Tauri; la maqueta se vuelve el producto)"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "jidoka_tuberia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
